2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (read_avail_input):
	* frame.c (Fdelete_frame): Call Fdelete_terminal.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (clone_per_buffer_values, reset_buffer_local_variables)
	(Fbuffer_local_value, Fbuffer_local_variables): Don't forget undo_list.

2008-02-11  Juanma Barranquero  <lekktu@gmail.com>

	* w32menu.c (push_submenu_start, push_submenu_end)
	(push_left_right_boundary, push_menu_pane, push_menu_item):
	* keyboard.c (read_key_sequence): Don't pass args with side effects
	to AREF, it fails when compiling with -DENABLE_CHECKING.

2008-02-11  Kenichi Handa  <handa@ni.aist.go.jp>

	* Makefile.in (${lispsource}international/charprop.el):
	Delete this target.

	* search.c (boyer_moore): Fix incorrect synching of the trunk and
	emacs-unicode-2.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* terminal.c (Fdelete_terminal): Clean up the `force' path.

2008-02-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.c (Qnoelisp): New symbol.
	(syms_of_frame): Initialize it.
	(Fdelete_frame): Use it to distinguish a mere `force' passed from
	someharmles Elisp code, from a strong `force' from x_connection_closed.
	* frame.h (Qnoelisp): Declare.
	* xterm.c (x_connection_closed): Pass `noelisp'.

	* lisp.h (struct Lisp_Misc_Any, struct Lisp_Marker)
	(struct Lisp_Overlay, struct Lisp_Kboard_Objfwd)
	(struct Lisp_Save_Value, struct Lisp_Free): Use enum Lisp_Misc_Type
	rather than `int' for the type of `type'.

2008-02-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/gnu-linux.h: Remove support for non-ELF and linux-1.x.

	* Makefile.in (GNUC): Remove support for gcc-1.x.

2008-02-10  Richard Stallman  <rms@gnu.org>

	* lisp.h (ASET): Use AREF, not ASLOT.

2008-02-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (ASET): Check bounds.

2008-02-10  Glenn Morris  <rgm@gnu.org>

	* buffer.c (mode-name): Doc fix.

2008-02-09  Dan Nicolaescu  <dann@ics.uci.edu>
